--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".CreateContactActivity"
     android:orientation="vertical">
 
@@ -22,32 +23,35 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        card_view:cardElevation="8dp"
+        card_view:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_marginTop="9dp"
                     android:baselineAlignBottom="true"
                     android:src="@drawable/ic_person_black_24dp" />
 
                 <EditText
                     android:id="@+id/contact_input_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
+                    android:layout_marginStart="10dp"
                     android:hint="Name"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -55,35 +59,36 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_marginTop="9dp"
                     android:baselineAlignBottom="true"
                     android:src="@drawable/ic_phone_android_black_24dp" />
 
                 <EditText
                     android:id="@+id/contact_input_id"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
+                    android:layout_marginStart="10dp"
                     android:hint="ID"
                     android:textSize="14sp" />
             </LinearLayout>
+            <Button
+                android:id="@+id/contact_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center"
+                android:background="@color/colorAccent"
+                android:text="Save"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
-    <Button
-        android:id="@+id/contact_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_gravity="center"
-        android:background="@color/colorAccent"
-        android:text="Save"
-        android:textColor="#FFFFFF" />
+
 
 </LinearLayout>
