--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/contactProfileImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_person" />
 
         <TextView
             android:id="@+id/contactName"
