--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -29,7 +29,7 @@
                 android:paddingEnd="5dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/ic_person" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -41,6 +41,7 @@
                     android:paddingTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:singleLine="true"
                     android:clickable="true"
                     style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
 
