--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E10712</color>
+    <color name="colorPrimary">#FFFFFF</color>  <!-- #E10712 -->
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#45A163</color>
     <color name="black">#000000</color>
