--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -16,8 +16,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="Create a new Contact"
-            android:textColor="@color/colorAccent"
-            android:textSize="32sp" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            tools:fontFamily="@font/hind_light" />
     </RelativeLayout>
 
     <android.support.v7.widget.CardView
